
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragas-observability-console"
version = "0.1.0"
description = "Build a polished evaluation control surface for groundedness, answer quality, and retrieval performance with report-ready summaries."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
